## Process this file with automake to produce Makefile.in.

SUBDIRS = lib @ZEBRA@ \
         m4 @pkgsrcdir@ \
         redhat @SOLARIS@

DIST_SUBDIRS = lib zebra \
	  m4 pkgsrc redhat \
	  solaris

EXTRA_DIST = aclocal.m4 SERVICES TODO REPORTING-BUGS INSTALL.quagga.txt \
	update-autotools \
	tools/mrlg.cgi tools/rrcheck.pl tools/rrlookup.pl tools/zc.pl \
	tools/zebra.el

ACLOCAL_AMFLAGS = -I m4
